--- a/content/posts/2023-06-05.md
+++ b/content/posts/2023-06-05.md
@@ -1,21 +1,24 @@
 ---
-title: "Coding Period Begins"
+title: 'Coding Period Begins'
 date: 2023-06-05T22:44:32+05:30
 ---
 
 I had my end-semester examinations during the most part of the community bonding period, thus I was not able to contribute or communicate much. But, once the coding period started from May 28, I had a onboard meeting with my mentors and we discussed about how to proceed with the work.
 
 ### Pulpito Next-Gen
-The main motive of this project is to rewrite `Pulpito` and include some functionalities of `Teuthology` such as *scheduling* and *killing* jobs in it. [Pulpito](https://pulpito.ceph.com/) is a dashboard for Ceph test runs and results.
+
+The main motive of this project is to rewrite `Pulpito` and include some functionalities of `Teuthology` such as _scheduling_ and _killing_ jobs in it. [Pulpito](https://pulpito.ceph.com/) is a dashboard for Ceph test runs and results.
 
 It is being re-written in order to make the interface more user-friendly and maintainable in the future. The framework chosen by the core maintainer is ReactJS. Right now I'm learning React as I'm not the best at frontend development but I'll try my best.
 
 ### First Week
+
 Today marks the end of the first week of the coding period. Right now, there are some bugs in the re-write and the mentors told me to assign some of them to myself and work on it.
 
 Right now, I'm working on two bugs:
-* https://github.com/ceph/pulpito-ng/issues/8
-* https://github.com/ceph/pulpito-ng/issues/9
+
+- https://github.com/ceph/pulpito-ng/issues/8
+- https://github.com/ceph/pulpito-ng/issues/9
 
 Other than that, I've set up my local environment for development which includes the [`teuthology-api`](https://github.com/ceph/teuthology-api), [`pulpito-ng`](https://github.com/ceph/pulpito-ng/) and [`paddles`](https://github.com/ceph/paddles).
 
